--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 	<meta charset="utf-8" />
-	<title>Heterogram Checker using Turing Machine in JavaScript</title>
+	<title>Palindrom Checker dengan Mesin Turing</title>
 	<link rel="stylesheet" href="static/style.css" />
 	<script src="static/jquery.js"></script>
 	<script src="static/raphael.js"></script>
